# Judger

./: CMakeLists.txt  README.md
src/: Clock.cpp  Clock.h  Comparer.cpp  Comparer.h  Compiler.cpp  Compiler.h  Executor.cpp  Executor.h  Logger.cpp  Logger.h  Option.cpp  Option.h  Result.cpp  Result.h  WhitList.cpp  WhitList.h  WhiteList.cpp  WhiteList.h  main.cpp  utility.cpp  utility.h
syscall/: syscall.txt  syscall_x86_64.txt
test/: Main.cpp
